--- a/application-dev.properties
+++ b/application-dev.properties
@@ -1,3 +1,5 @@
+spring.name= Properties for dev
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
