--- a/application-prod.properties
+++ b/application-prod.properties
@@ -1,4 +1,4 @@
-spring.name= Properties for prod
+spring.name= Properties for prod updated
 
 spring.data.mongodb.uri=mongodb://localhost:27017
 spring.data.mongodb.database=microservices
