--- a/application-dev.properties
+++ b/application-dev.properties
@@ -1,4 +1,4 @@
-spring.name= Properties for dev
+spring.name= Properties for dev upddate
 
 spring.datasource.url=jdbc:mysql://localhost:3306/microservices
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
